make module to make sure css doesn't leak to other jsx files

--- a/my-react-app/src/DigitalClock.module.css
+++ b/my-react-app/src/DigitalClock.module.css
@@ -1,4 +1,4 @@
-body{
+.clock-body{
     background-image:url("src/assets/ChatGPT Image Nov 29, 2025, 07_29_36 PM.png");
     background-position: center;
     background-repeat: no-repeat;
