--- a/my-react-app/src/TravelJournal/HeaderTravel.module.css
+++ b/my-react-app/src/TravelJournal/HeaderTravel.module.css
@@ -3,21 +3,25 @@
 
     font-family: Arial, Helvetica, sans-serif;
     background-color: #f55a5a;
-    height: 100px;
+    height: 60px;
     display: flex ;
     color: white;
     align-items: center;
     justify-content: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    /* font-size: 50px; */
-    /* padding-top: 30px; */
-
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
 
 }
+
 .hr1 > h1{
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-size: 4rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 2rem;
     font-weight: bold;
+    transition: text-decoration 0.3s ease;
+}
+
+.hr1 > h1:hover{
+    text-decoration: underline 2px;
 }
